lib/objax/parser/index.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "or";
  const peg$c1 = "and";
  const peg$c2 = "not";
  const peg$c3 = "(";
  const peg$c4 = ")";
  const peg$c5 = "true";
  const peg$c6 = "false";
  const peg$c7 = "parent";
  const peg$c8 = "is";
  const peg$c9 = "transition";
  const peg$c10 = "of";
  const peg$c11 = "..";
  const peg$c12 = "[";
  const peg$c13 = "]";
  const peg$c14 = ",";
  const peg$c15 = "name";
  const peg$c16 = "=";
  const peg$c17 = "duplicate";
  const peg$c18 = "on";
  const peg$c19 = "when";
  const peg$c20 = "operation";
  const peg$c21 = ".";
  const peg$c22 = "\"";
  const peg$c23 = "\\\"";
  const peg$c24 = "\\\\";
  const peg$c25 = "==";
  const peg$c26 = "!=";
  const peg$c27 = "<=";
  const peg$c28 = ">=";
  const peg$c29 = "**";
  const peg$c30 = "^";
  const peg$c31 = "it";
  const peg$c32 = "{";
  const peg$c33 = "}";
  const peg$c34 = "#";
  const peg$c35 = "\r";
  const peg$c36 = "\n";

  const peg$r0 = /^[\p{Script=Hiragana}\p{Script=Katakana}\p{Script=Han}A-Za-z_]/u;
  const peg$r1 = /^[\p{Script=Hiragana}\p{Script=Katakana}\p{Script=Han}A-Za-z0-9_]/u;
  const peg$r2 = /^[^"\\]/;
  const peg$r3 = /^[<>]/;
  const peg$r4 = /^[+\-_]/;
  const peg$r5 = /^[%*\/]/;
  const peg$r6 = /^[+\-]/;
  const peg$r7 = /^[0-9]/;
  const peg$r8 = /^[ \t\n\r]/;
  const peg$r9 = /^[^\n\r]/;

  const peg$e0 = peg$literalExpectation("or", false);
  const peg$e1 = peg$literalExpectation("and", false);
  const peg$e2 = peg$literalExpectation("not", false);
  const peg$e3 = peg$literalExpectation("(", false);
  const peg$e4 = peg$literalExpectation(")", false);
  const peg$e5 = peg$literalExpectation("true", false);
  const peg$e6 = peg$literalExpectation("false", false);
  const peg$e7 = peg$literalExpectation("parent", false);
  const peg$e8 = peg$literalExpectation("is", false);
  const peg$e9 = peg$literalExpectation("transition", false);
  const peg$e10 = peg$literalExpectation("of", false);
  const peg$e11 = peg$literalExpectation("..", false);
  const peg$e12 = peg$literalExpectation("[", false);
  const peg$e13 = peg$literalExpectation("]", false);
  const peg$e14 = peg$literalExpectation(",", false);
  const peg$e15 = peg$literalExpectation("name", false);
  const peg$e16 = peg$literalExpectation("=", false);
  const peg$e17 = peg$literalExpectation("duplicate", false);
  const peg$e18 = peg$literalExpectation("on", false);
  const peg$e19 = peg$literalExpectation("when", false);
  const peg$e20 = peg$literalExpectation("operation", false);
  const peg$e21 = peg$classExpectation(["\\p{Script=Hiragana}", "\\p{Script=Katakana}", "\\p{Script=Han}", ["A", "Z"], ["a", "z"], "_"], false, false, true);
  const peg$e22 = peg$classExpectation(["\\p{Script=Hiragana}", "\\p{Script=Katakana}", "\\p{Script=Han}", ["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, true);
  const peg$e23 = peg$literalExpectation(".", false);
  const peg$e24 = peg$literalExpectation("\"", false);
  const peg$e25 = peg$literalExpectation("\\\"", false);
  const peg$e26 = peg$literalExpectation("\\\\", false);
  const peg$e27 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e28 = peg$literalExpectation("==", false);
  const peg$e29 = peg$literalExpectation("!=", false);
  const peg$e30 = peg$literalExpectation("<=", false);
  const peg$e31 = peg$literalExpectation(">=", false);
  const peg$e32 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e33 = peg$classExpectation(["+", "-", "_"], false, false, false);
  const peg$e34 = peg$classExpectation(["%", "*", "/"], false, false, false);
  const peg$e35 = peg$literalExpectation("**", false);
  const peg$e36 = peg$literalExpectation("^", false);
  const peg$e37 = peg$literalExpectation("it", false);
  const peg$e38 = peg$literalExpectation("{", false);
  const peg$e39 = peg$literalExpectation("}", false);
  const peg$e40 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e41 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e42 = peg$otherExpectation("integer");
  const peg$e43 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e44 = peg$literalExpectation("#", false);
  const peg$e45 = peg$classExpectation(["\n", "\r"], true, false, false);
  const peg$e46 = peg$literalExpectation("\r", false);
  const peg$e47 = peg$literalExpectation("\n", false);

  function peg$f0(stmts) {    return stmts;  }
  function peg$f1(head, tail) {
    return [head].concat(tail.map(item => item[1]));
  }
  function peg$f2() {    return { type: "ExprStatement", expr: $1 }  }
  function peg$f3(left, tail) {
    let node = left;
    for (const t of tail) node = { type: "Or", left: node, right: t[3] };
    return node;
  }
  function peg$f4(left, tail) {
    let node = left;
    for (const t of tail) node = { type: "And", left: node, right: t[3] };
    return node;
  }
  function peg$f5(operand) {    return { type: "Not", operand }  }
  function peg$f6(value) {    return value;  }
  function peg$f7(value) {
    return { type: "Boolean", value: value === "true" }
  }
  function peg$f8(value) {
    return { type: "Parent", value }
  }
  function peg$f9(name, field, arr) {
    const states = arr.value;
    return { type: "Transition", name, states, field }
  }
  function peg$f10(start, end) {
    return { type: "Range", start, end }
  }
  function peg$f11() {    return { type: "Array", value: [] };  }
  function peg$f12(head, tail) {
    function expand(entry) {
      if (entry && entry.type === "Range") {
        const a = entry.start.value;
        const b = entry.end.value;
        const step = a <= b ? 1 : -1;
        const out = [];
        for (let v = a; step > 0 ? v <= b : v >= b; v += step) {
          out.push({ type: "Integer", value: v });
        }
        return out;
      }
      return [entry];
    }
    const value = expand(head).concat(tail.flatMap(t => expand(t[3])));
    return { type: "Array", value };
  }
  function peg$f13(value) {
    return { type: "DefName", value }
  }
  function peg$f14(name, value) {
    return { type: "DefField", name, value }
  }
  function peg$f15(name) {
    return { type: "Duplicate", name }
  }
  function peg$f16(name, guard, transition) {
    return {
      type: "EventAction",
      name: { ...name, name: name.name.toLowerCase() },
      transition,
      guard
    }
  }
  function peg$f17(value) {    return value  }
  function peg$f18(name, field, block) {
    return { type: "Operation", name, field, block };
  }
  function peg$f19(name) {
    return { type: "Name", name }
  }
  function peg$f20(ref) {
    return ref;
  }
  function peg$f21(head, tail, rest) {
    const more = rest ? rest.map(r => r[1]) : [];
    return { type: "Reference", path: [head, tail].concat(more) }
  }
  function peg$f22(chars) {
    return { type: "String", value: chars.join("") }
  }
  function peg$f23() {    return "\""  }
  function peg$f24() {    return "\\"  }
  function peg$f25() {    return text();  }
  function peg$f26(left, op, right) {
    return { type: "Compare", op, left, right };
  }
  function peg$f27(head, tail) {
    let node = head;
    for (const t of tail) {
      node = { type: "BinaryOp", op: t[1], left: node, right: t[3] };
    }
    return node;
  }
  function peg$f28(head, tail) {
    let node = head;
    for (const t of tail) {
      node = { type: "BinaryOp", op: t[1], left: node, right: t[3] };
    }
    return node;
  }
  function peg$f29(head, op, right) {
    return { type: "BinaryOp", op, left: head, right };
  }
  function peg$f30(expr) {    return expr;  }
  function peg$f31() {    return { type: "It" }  }
  function peg$f32(name, args) {
    return { type: "FunctionCall", name, args: args ?? [] };
  }
  function peg$f33(head, tail) {    return [head].concat(tail.map(t => t[3]));  }
  function peg$f34(name) {    return { type: "NameLiteral", value: name.name }  }
  function peg$f35(expr) {    return { type: "Block", expr }  }
  function peg$f36(sign, digits, frac) {
    const raw = digits.join("") + "." + frac.join("");
    const value = parseFloat(raw) * (sign === "-" ? -1 : 1);
    return { type: "Number", value }
  }
  function peg$f37(sign, digits) {
    const value = toInt(digits) * (sign === "-" ? -1 : 1);
    return { type: "Integer", value }
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseStatementList();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatementList() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseStatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseStatement();
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseStatement();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatement() {
    let s0, s1;

    s0 = peg$parseDuplicate();
    if (s0 === peg$FAILED) {
      s0 = peg$parseDefName();
      if (s0 === peg$FAILED) {
        s0 = peg$parseParent();
        if (s0 === peg$FAILED) {
          s0 = peg$parseEventAction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseOperation();
            if (s0 === peg$FAILED) {
              s0 = peg$parseTransition();
              if (s0 === peg$FAILED) {
                s0 = peg$parseDefField();
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parseAdditive();
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$f2();
                  }
                  s0 = s1;
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseValue() {
    let s0;

    s0 = peg$parseOr();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAnd();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCompare();
        if (s0 === peg$FAILED) {
          s0 = peg$parseAdditive();
          if (s0 === peg$FAILED) {
            s0 = peg$parsePrimary();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseOr() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseAnd();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (input.substr(peg$currPos, 2) === peg$c0) {
        s5 = peg$c0;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseAnd();
        if (s7 !== peg$FAILED) {
          s4 = [s4, s5, s6, s7];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (input.substr(peg$currPos, 2) === peg$c0) {
            s5 = peg$c0;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseAnd();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseAnd();
    }

    return s0;
  }

  function peg$parseAnd() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseNot();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (input.substr(peg$currPos, 3) === peg$c1) {
        s5 = peg$c1;
        peg$currPos += 3;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseNot();
        if (s7 !== peg$FAILED) {
          s4 = [s4, s5, s6, s7];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (input.substr(peg$currPos, 3) === peg$c1) {
            s5 = peg$c1;
            peg$currPos += 3;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseNot();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNot();
    }

    return s0;
  }

  function peg$parseNot() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseNot();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f5(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseBoolPrimary();
    }

    return s0;
  }

  function peg$parseBoolPrimary() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseOr();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 41) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f6(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseCompare();
      if (s0 === peg$FAILED) {
        s0 = peg$parseBoolean();
        if (s0 === peg$FAILED) {
          s0 = peg$parseFieldValue();
        }
      }
    }

    return s0;
  }

  function peg$parseBoolean() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 === peg$FAILED) {
      if (input.substr(peg$currPos, 5) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseParent() {
    let s0, s1, s2, s3, s4, s5, s6;
